--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -25,11 +25,11 @@ body {
 .picture {
   height: 300px;
   width: 300px;
-  background-color: lawngreen;
+  background-color: rgb(95, 120, 202);
   margin: auto;
 }
 
-.yesButton {
+.yesBtn {
   height: 100px;
   width: 100px;
   border-radius: 50px;
@@ -40,7 +40,7 @@ body {
   margin: 20px;
 }
 
-.noButton {
+.noBtn {
   height: 100px;
   width: 100px;
   border-radius: 50px;
@@ -49,4 +49,26 @@ body {
   font-size: 50px;
   border: 0;
   margin: 20px;
+}
+
+.createBtn {
+  height: 100px;
+  width: 200px;
+  border-radius: 10px;
+  background-color: rgb(134, 17, 17);
+  color: white;
+  font-size: 50px;
+  border: 0;
+  margin: 50px;
+}
+
+.joinBtn {
+  height: 100px;
+  width: 200px;
+  border-radius: 10px;
+  background-color: rgb(68, 114, 21);
+  color: white;
+  font-size: 50px;
+  border: 0;
+  margin: 50px;
 }
