--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,10 +1,12 @@
 
 html {
   min-height: 100%;
+font-family: 'Montserrat', sans-serif;
 }
 
 body {
-  background-image: linear-gradient(to bottom right, #fea060, #a03c3c);
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
+font-family: 'Montserrat', sans-serif;
 }
 
 .container {
@@ -20,6 +22,32 @@ body {
   text-align: center;
   border-radius: 30px;
   margin-top: 40px;
+}
+
+h1 {
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  line-height: 70px;
+  font-size: 70px;
+}
+
+.main {
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: auto;
+  line-height: 100px;
+  font-size: 90px;
+}
+a, a:link, a:visited, a:hover, a:active 
+{
+  text-decoration: none;
 }
 
 .picture {
@@ -51,42 +79,38 @@ body {
   margin: 20px;
 }
 
-.createBtn {
-  height: 100px;
-  width: 200px;
+.decideBtn {
+  height: 70px;
+  width: 300px;
   border-radius: 10px;
-  background-color: rgb(134, 17, 17);
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   color: white;
-  font-size: 50px;
+  font-size: 40px;
   border: 0;
-  margin: 50px;
-}
-
-.joinBtn {
-  height: 100px;
-  width: 200px;
-  border-radius: 10px;
-  background-color: rgb(68, 114, 21);
-  color: white;
-  font-size: 50px;
-  border: 0;
-  margin: 50px;
+  margin: auto;
+  margin-top: 50px;
 }
 
 .backBtn {
   height: 50px;
   width: 200px;
   border-radius: 10px;
-  background-color: rgb(104, 104, 104);
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   color: white;
   font-size: 30px;
   border: 0;
   margin: 50px;
+  margin-top: 300px;
 }
 
 .formBox {
   height: 50px;
-  width: 200px;
+  width: 400px;
   font-size: 30px;
-  margin: 50px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+input:focus, textarea:focus, select:focus{
+  outline: none;
 }
