--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -64,7 +64,7 @@ a, a:link, a:visited, a:hover, a:active
   background-color: rgb(68, 114, 21);
   color: white;
   font-size: 50px;
-  border: 0;
+  border: none;
   margin: 20px;
 }
 
@@ -75,8 +75,9 @@ a, a:link, a:visited, a:hover, a:active
   background-color: rgb(134, 17, 17);
   color: white;
   font-size: 50px;
-  border: 0;
+  border: none;
   margin: 20px;
+  outline: none;
 }
 
 .decideBtn {
@@ -86,7 +87,7 @@ a, a:link, a:visited, a:hover, a:active
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   color: white;
   font-size: 40px;
-  border: 0;
+  border: none;
   margin: auto;
   margin-top: 50px;
 }
@@ -98,7 +99,7 @@ a, a:link, a:visited, a:hover, a:active
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   color: white;
   font-size: 30px;
-  border: 0;
+  border: none;
   margin: 50px;
   margin-top: 300px;
 }
@@ -111,6 +112,18 @@ a, a:link, a:visited, a:hover, a:active
   padding: 10px;
 }
 
-input:focus, textarea:focus, select:focus{
+button:focus, input:focus, textarea:focus, select:focus{
   outline: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
