--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -101,7 +101,6 @@ a, a:link, a:visited, a:hover, a:active
   font-size: 30px;
   border: none;
   margin: 50px;
-  margin-top: 300px;
 }
 
 .formBox {
@@ -110,6 +109,7 @@ a, a:link, a:visited, a:hover, a:active
   font-size: 30px;
   border-radius: 10px;
   padding: 10px;
+  margin: 10px;
 }
 
 button:focus, input:focus, textarea:focus, select:focus{
