--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -5,7 +5,7 @@ font-family: 'Montserrat', sans-serif;
 }
 
 body {
-  background-image: linear-gradient(135deg, #a56dbb 0%,#eb5d5d 100%);
+  background-image: linear-gradient(135deg, #a56dbb -30%,#eb5d5d 130%);
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -36,6 +36,36 @@ h1 {
   font-size: 70px;
 }
 
+h2 {
+  margin: auto;
+  margin-bottom: 10px;
+  margin-top: 0px;
+  line-height: 50px;
+  font-size: 50px;
+  font-weight: bolder;
+  color: rgb(50, 50, 50);
+}
+
+h3 {
+  margin: auto;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  font-size: 25px;
+  font-weight: bold;
+  color: rgb(50, 50, 50);
+}
+
+h4 {
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 40px;
+}
+
 .main {
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   -webkit-background-clip: text;
@@ -54,8 +84,10 @@ a, a:link, a:visited, a:hover, a:active
   height: 300px;
   width: 300px;
   border-radius: 10px;
-  background-color: rgb(218, 122, 253);
+  background-image: linear-gradient(135deg, #a56dbb -30%,#eb5d5d 130%);
   margin: auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .yesBtn {
