--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -72,8 +72,8 @@ h4 {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   margin: auto;
-  line-height: 100px;
-  font-size: 90px;
+  line-height: 80px;
+  font-size: 80px;
 }
 a, a:link, a:visited, a:hover, a:active 
 {
@@ -94,22 +94,22 @@ a, a:link, a:visited, a:hover, a:active
   height: 100px;
   width: 100px;
   border-radius: 50px;
-  background-image: linear-gradient(135deg, #5add50 0%,#21aabd 100%);
+  background-image: linear-gradient(135deg, #67c051 0%,#19a87d 100%);
   color: white;
   font-size: 50px;
   border: none;
-  margin: 20px;
+  margin: 30px;
 }
 
 .noBtn {
   height: 100px;
   width: 100px;
   border-radius: 50px;
-  background-image: linear-gradient(135deg, #fc4646 0%,#c93db6 100%);
+  background-image: linear-gradient(135deg, #fc4646 0%,#ce4686 100%);
   color: white;
   font-size: 50px;
   border: none;
-  margin: 20px;
+  margin: 30px;
   outline: none;
 }
 
