--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,12 +1,10 @@
 
-html {
-  min-height: 100%;
-font-family: 'Montserrat', sans-serif;
-}
-
-body {
-  background-image: linear-gradient(135deg, #a56dbb -30%,#eb5d5d 130%);
+html, body {
+  background-image: linear-gradient(to bottom right, #a56dbb, #eb5d5d);
   font-family: 'Montserrat', sans-serif;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  height: 100%;
 }
 
 .container {
@@ -16,12 +14,14 @@ body {
 }
 
 .card {
-  height: 850px;
+  height: 100%;
   width: 500px;
   background-color: rgb(255, 255, 255);
   text-align: center;
   border-radius: 30px;
-  margin-top: 40px;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 h1 {
