--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,27 +1,23 @@
 
 html, body {
-  background-image: linear-gradient(to bottom right, #a56dbb, #eb5d5d);
+  background-color: rgb(34, 34, 34);
   font-family: 'Montserrat', sans-serif;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  height: 100%;
 }
 
 .container {
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  min-height: 100vh;
 }
 
 .card {
-  height: 100%;
-  width: 500px;
+  width: 480px;
   background-color: rgb(255, 255, 255);
   text-align: center;
   border-radius: 30px;
   margin: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 h1 {
@@ -32,16 +28,14 @@ h1 {
   margin: auto;
   margin-top: 50px;
   margin-bottom: 30px;
-  line-height: 70px;
-  font-size: 70px;
+  line-height: 60px;
+  font-size: 60px;
 }
 
 h2 {
-  margin: auto;
-  margin-bottom: 10px;
-  margin-top: 0px;
-  line-height: 50px;
-  font-size: 50px;
+  margin: 20px;
+  line-height: 40px;
+  font-size: 40px;
   font-weight: bolder;
   color: rgb(50, 50, 50);
 }
@@ -62,27 +56,14 @@ h4 {
   -webkit-text-fill-color: transparent;
   margin: auto;
   margin-top: 30px;
-  margin-bottom: 30px;
-  font-size: 40px;
-}
-
-.main {
-  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin: auto;
-  line-height: 80px;
-  font-size: 80px;
-}
-a, a:link, a:visited, a:hover, a:active 
-{
-  text-decoration: none;
+  margin-bottom: 20px;
+  font-size: 30px;
 }
 
 .picture {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 80%;
+  overflow: hidden;
   border-radius: 10px;
   background-image: linear-gradient(135deg, #a56dbb -30%,#eb5d5d 130%);
   margin: auto;
@@ -98,7 +79,10 @@ a, a:link, a:visited, a:hover, a:active
   color: white;
   font-size: 50px;
   border: none;
+  outline: none;
   margin: 30px;
+  margin-bottom: 0px;
+  margin-top: 20px;
 }
 
 .noBtn {
@@ -109,8 +93,10 @@ a, a:link, a:visited, a:hover, a:active
   color: white;
   font-size: 50px;
   border: none;
-  margin: 30px;
   outline: none;
+  margin: 30px;
+  margin-bottom: 0px;
+  margin-top: 20px;
 }
 
 .decideBtn {
@@ -133,12 +119,33 @@ a, a:link, a:visited, a:hover, a:active
   color: white;
   font-size: 30px;
   border: none;
-  margin: 50px;
+  margin: 35px;
+}
+
+.mainPage{
+  margin-top: 180px;
+}
+.logo {
+  width: 250px;
+  margin-bottom: 10px;
+}
+.main {
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: auto;
+  line-height: 70px;
+  font-size: 70px;
+}
+a, a:link, a:visited, a:hover, a:active 
+{
+  text-decoration: none;
 }
 
 .formBox {
   height: 50px;
-  width: 400px;
+  width: 300px;
   font-size: 30px;
   border-radius: 10px;
   padding: 10px;
