--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -20,6 +20,7 @@ html, body {
   margin-bottom: 15px;
 }
 
+/* Main page logo font */
 h1 {
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   -webkit-background-clip: text;
@@ -32,23 +33,17 @@ h1 {
   font-size: 60px;
 }
 
+/* Restaurant name */
 h2 {
-  margin: 20px;
+  margin: 0px;
+  margin-top: 30px;
   line-height: 40px;
-  font-size: 35px;
+  font-size: 40px;
   font-weight: bolder;
   color: rgb(50, 50, 50);
 }
 
-h3 {
-  margin: auto;
-  margin-bottom: 0px;
-  margin-top: 0px;
-  font-size: 25px;
-  font-weight: bold;
-  color: rgb(50, 50, 50);
-}
-
+/* Session code and city */
 h4 {
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   -webkit-background-clip: text;
@@ -57,16 +52,18 @@ h4 {
   margin: auto;
   margin-top: 30px;
   margin-bottom: 20px;
-  font-size: 40px;
+  font-size: 35px;
   font-weight: bold;
 }
 
+/* Restaurant picture */
 .picture {
   border-radius: 15px;
   width: 96%;
   height: 96%;
   margin-top: 7px;
 }
+/* Picture border */
 .picBox {
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   height: 350px;
@@ -146,6 +143,16 @@ h4 {
 a, a:link, a:visited, a:hover, a:active 
 {
   text-decoration: none;
+}
+.stars {
+    background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-top: 0px;
+    font-size: 45px;
+    font-weight: bold;
+    padding: 0px;
 }
 
 .formBox {
