--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -16,7 +16,7 @@ html, body {
   text-align: center;
   border-radius: 30px;
   margin: auto;
-  margin-top: 15px;
+  margin-top: 25px;
   margin-bottom: 15px;
 }
 
@@ -62,19 +62,27 @@ h4 {
   width: 96%;
   height: 96%;
   margin-top: 7px;
+  background-position: center center;
+  background-size: cover;
 }
 /* Picture border */
 .picBox {
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   height: 350px;
-  width: 350px;
+  width: 85%;
   border-radius: 20px;
+  margin: auto;
+  margin-top: 50px;
+  margin-bottom: 0;
 }
 
+.titleInfo{
+  height: 160px;
+  text-align: center;
+}
 .choices {
-  position: absolute;
-  bottom: 40px;
-  left: 50px;
+  height: 160px;
+  margin-top: 90px;
 }
 .yesBtn {
   height: 100px;
@@ -82,11 +90,11 @@ h4 {
   border-radius: 50px;
   background-image: linear-gradient(135deg, #67c051 0%,#19a87d 100%);
   color: white;
-  font-size: 50px;
+  font-size: 60px;
   border: none;
   outline: none;
-  margin-left: 60px;
-  margin-top: 50px;
+  margin-left: 13%;
+  margin-top: 35px;
 }
 .noBtn {
   height: 100px;
@@ -94,13 +102,16 @@ h4 {
   border-radius: 50px;
   background-image: linear-gradient(135deg, #fc4646 0%,#ce4686 100%);
   color: white;
-  font-size: 50px;
+  font-size: 60px;
   border: none;
   outline: none;
-  margin-right: 60px;
-  margin-top: 50px;
+  margin-right: 13%;
+  margin-top: 35px;
 }
 
+.lobby{
+  padding-top: 240px;
+}
 .decideBtn {
   height: 70px;
   width: 300px;
@@ -125,10 +136,10 @@ h4 {
 }
 
 .mainPage{
-  margin-top: 180px;
+  margin-top: 190px;
 }
 .logo {
-  width: 250px;
+  width: 230px;
   margin-bottom: 10px;
 }
 .main {
@@ -162,6 +173,7 @@ a, a:link, a:visited, a:hover, a:active
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
+  text-align: center;
 }
 
 button:focus, input:focus, textarea:focus, select:focus{
