--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -11,13 +11,13 @@ html, body {
 
 .card {
   width: 450px;
-  height: 800px;
+  height: 880px;
   background-color: rgb(255, 255, 255);
   text-align: center;
   border-radius: 30px;
   margin: auto;
   margin-top: 25px;
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 }
 
 /* Main page logo font */
@@ -37,8 +37,8 @@ h1 {
 h2 {
   margin: 0px;
   margin-top: 30px;
-  line-height: 40px;
-  font-size: 40px;
+  line-height: 45px;
+  font-size: 45px;
   font-weight: bolder;
   color: rgb(50, 50, 50);
 }
@@ -58,55 +58,68 @@ h4 {
 
 /* Restaurant picture */
 .picture {
-  border-radius: 15px;
-  width: 96%;
-  height: 96%;
-  margin-top: 7px;
-  background-position: center center;
-  background-size: cover;
+  position: absolute;
+  margin: auto; 
+  max-height: 220%;
+  max-width: 220%;
+  left: -100%;
+  right: -100%;
+  top: -100%;
+  bottom: -100%;
+
 }
 /* Picture border */
 .picBox {
-  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
-  height: 350px;
-  width: 85%;
-  border-radius: 20px;
+  position: relative;
+  overflow: hidden;
   margin: auto;
-  margin-top: 50px;
-  margin-bottom: 0;
+  width: 96%;
+  height: 98%;
+  border-radius: 20px;
+
+}
+.picBorder {
+  padding-top: 8px;
+  margin: auto;
+  width: 85%;
+  height: 380px;
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
+  border-radius: 25px;
 }
 
 .titleInfo{
   height: 160px;
   text-align: center;
+  width: 90%;
+  margin: auto;
 }
 .choices {
   height: 160px;
-  margin-top: 90px;
+  margin-top: 100px;
 }
 .yesBtn {
-  height: 100px;
-  width: 100px;
-  border-radius: 50px;
+  height: 105px;
+  width: 105px;
+  border-radius: 100px;
   background-image: linear-gradient(135deg, #67c051 0%,#19a87d 100%);
   color: white;
   font-size: 60px;
   border: none;
   outline: none;
   margin-left: 13%;
-  margin-top: 35px;
+  margin-top: 50px;
 }
 .noBtn {
-  height: 100px;
-  width: 100px;
-  border-radius: 50px;
+  height: 105px;
+  width: 105px;
+  border-radius: 100px;
   background-image: linear-gradient(135deg, #fc4646 0%,#ce4686 100%);
   color: white;
   font-size: 60px;
   border: none;
   outline: none;
   margin-right: 13%;
-  margin-top: 35px;
+  margin-top: 40px;
 }
 
 .lobby{
