--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -66,7 +66,6 @@ h4 {
   right: -100%;
   top: -100%;
   bottom: -100%;
-
 }
 /* Picture border */
 .picBox {
@@ -87,7 +86,7 @@ h4 {
   border-radius: 25px;
 }
 
-.titleInfo{
+.titleInfo {
   height: 160px;
   text-align: center;
   width: 90%;
@@ -123,7 +122,7 @@ h4 {
 }
 
 .lobby{
-  padding-top: 240px;
+  padding-top: 280px;
 }
 .decideBtn {
   height: 70px;
@@ -149,7 +148,7 @@ h4 {
 }
 
 .mainPage{
-  margin-top: 190px;
+  margin-top: 230px;
 }
 .logo {
   width: 230px;
@@ -199,35 +198,23 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
 }
 
-
+/* Match animation */
 @keyframes heartBeat {
   0% {
     transform: scale(1);
   }
-
-  14% {
+  20% {
     transform: scale(1.1);
   }
-
-  28% {
-    transform: scale(1);
-  }
-
-  42% {
-    transform: scale(1.1);
-  }
-
   70% {
     transform: scale(1);
   }
 }
-
 .heartBeat {
   animation-name: heartBeat;
   animation-duration: 1s;
