--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -43,6 +43,24 @@ h2 {
   color: rgb(50, 50, 50);
 }
 
+/* Title font */
+h3 {
+  background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: -20px;
+  padding-bottom: 5px;
+  font-size: 60px;
+  line-height: 60px;
+}
+.title {
+  margin-bottom: 50px;
+  margin-top: 20px;
+}
+
 /* Session code and city */
 h4 {
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
@@ -114,7 +132,7 @@ h4 {
 }
 .decideBtn {
   height: 70px;
-  width: 300px;
+  width: 70%;
   border-radius: 10px;
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   color: white;
@@ -126,7 +144,7 @@ h4 {
 
 .backBtn {
   height: 50px;
-  width: 200px;
+  width: 45%;
   border-radius: 10px;
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
   color: white;
@@ -168,11 +186,12 @@ a, a:link, a:visited, a:hover, a:active
 
 .formBox {
   height: 50px;
-  width: 300px;
+  width: 70%;
   font-size: 30px;
   border-radius: 10px;
   padding: 10px;
   margin: 10px;
+  margin-top: 20px;
   text-align: center;
 }
 
