--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -29,7 +29,7 @@ h1 {
   margin: auto;
   margin-top: 50px;
   margin-bottom: 30px;
-  line-height: 60px;
+  line-height: 70px;
   font-size: 60px;
 }
 
@@ -124,6 +124,13 @@ h4 {
   height: 120px;
   width: 120px;
   margin-right: 12%;
+  margin-top: 40px;
+}
+.endInfo {
+  height: 160px;
+  text-align: center;
+  width: 80%;
+  margin: auto;
   margin-top: 40px;
 }
 
