--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -38,7 +38,7 @@ h2 {
   margin: 0px;
   margin-top: 30px;
   line-height: 45px;
-  font-size: 45px;
+  font-size: 40px;
   font-weight: bolder;
   color: rgb(34, 34, 34);
 }
@@ -133,12 +133,16 @@ h4 {
   margin-right: 12%;
   margin-top: 40px;
 }
-.endInfo {
+.alertInfo {
   height: 160px;
   text-align: center;
   width: 80%;
   margin: auto;
-  margin-top: 40px;
+  margin-top: 100px;
+}
+.alertText {
+  line-height: 45px;
+  font-size: 35px;
 }
 
 .lobby{
@@ -196,7 +200,7 @@ a, a:link, a:visited, a:hover, a:active
     background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-top: 0px;
-    font-size: 45px;
+    font-size: 40px;
     font-weight: bold;
     padding: 0px;
 }
