--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,14 +1,16 @@
-
+/* Background and universal font */
 html, body {
   background-color: rgb(34, 34, 34);
   font-family: 'Montserrat', sans-serif;
 }
 
+/* Centering of all elements on page */
 .container {
   display: flex;
   justify-content: center;
 }
 
+/* Universal card scaling */
 .card {
   width: 450px;
   height: 880px;
@@ -32,7 +34,6 @@ h1 {
   line-height: 70px;
   font-size: 60px;
 }
-
 /* Restaurant name */
 h2 {
   margin: 0px;
@@ -42,7 +43,6 @@ h2 {
   font-weight: bolder;
   color: rgb(34, 34, 34);
 }
-
 /* Title font */
 h3 {
   background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
@@ -89,7 +89,7 @@ h4 {
   top: -100%;
   bottom: -100%;
 }
-/* Picture border */
+/* Picture scaling and border */
 .picBox {
   position: relative;
   overflow: hidden;
@@ -107,6 +107,7 @@ h4 {
   border-radius: 25px;
 }
 
+/* Swipe page positioning and button styling */
 .titleInfo {
   height: 160px;
   text-align: center;
@@ -133,6 +134,8 @@ h4 {
   margin-right: 12%;
   margin-top: 40px;
 }
+
+/* Alert page positioning and font style */
 .alertInfo {
   height: 160px;
   text-align: center;
@@ -145,6 +148,7 @@ h4 {
   font-size: 35px;
 }
 
+/* Lobby page positioning and button style */
 .lobby{
   padding-top: 280px;
 }
@@ -160,6 +164,7 @@ h4 {
   margin-top: 50px;
 }
 
+/* Back button styling */
 .backBtn {
   height: 50px;
   width: 45%;
@@ -172,6 +177,7 @@ h4 {
   margin-bottom: 30px;
 }
 
+/* Main page info positioning */
 .mainPage{
   margin-top: 230px;
 }
@@ -188,12 +194,8 @@ h4 {
   line-height: 70px;
   font-size: 70px;
 }
-a, a:link, a:visited, a:hover, a:active 
-{
-  text-decoration: none;
-  color: white;
-  padding-top: 10px;
-}
+
+/* Rating stars */
 .stars {
     background-image: linear-gradient(135deg, #feab3a 0%,#f35626 100%);
     -webkit-background-clip: text;
@@ -205,6 +207,7 @@ a, a:link, a:visited, a:hover, a:active
     padding: 0px;
 }
 
+/* Input box customization */
 .formBox {
   height: 50px;
   width: 70%;
@@ -216,10 +219,17 @@ a, a:link, a:visited, a:hover, a:active
   text-align: center;
 }
 
+/* Removing outline affect on buttons */
 button:focus, input:focus, textarea:focus, select:focus{
   outline: none;
 }
-
+/* Removing font changes for links */
+a, a:link, a:visited, a:hover, a:active 
+{
+  text-decoration: none;
+  color: white;
+  padding-top: 10px;
+}
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
@@ -231,7 +241,7 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
-/* Match animation */
+/* Heartbeat animation changes */
 @keyframes heartBeat {
   0% {
     transform: scale(1);
